[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/Rooms/NewRoomCode.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Rooms/ScreenShake.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Rooms/Particles2D.gd" type="Script" id=3]
[ext_resource path="res://Assets/Crumbling-Mike_Koenig-1123041125.wav" type="AudioStream" id=4]
[ext_resource path="res://Scenes/Rooms/AudioStreamPlayer.gd" type="Script" id=5]
[ext_resource path="res://Assets/black.png" type="Texture" id=6]
[ext_resource path="res://Assets/Witchcraft_spr_sheets_V1_0.png" type="Texture" id=7]
[ext_resource path="res://Assets/my_wall.png" type="Texture" id=8]
[ext_resource path="res://Assets/mushy.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Prefabs/Gate.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Prefabs/Portals.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=12]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 2
emission_box_extents = Vector3( 128, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
angular_velocity = 60.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 45.0
angle_random = 1.0
scale = 10.0
scale_random = 1.0

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=6]
0/name = "Witchcraft_spr_sheets_V1_0.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 446, 120, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Witchcraft_spr_sheets_V1_0.png 1"
1/texture = ExtResource( 7 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 382, 120, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Witchcraft_spr_sheets_V1_0.png 2"
2/texture = ExtResource( 7 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 414, 120, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "my_wall.png 3"
3/texture = ExtResource( 8 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "mushy.png 4"
4/texture = ExtResource( 9 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [  ]
4/z_index = 0
5/name = "mushy.png 5"
5/texture = ExtResource( 9 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 16, 0, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shapes = [  ]
5/z_index = 0
6/name = "mushy.png 6"
6/texture = ExtResource( 9 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 32, 0, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shapes = [  ]
6/z_index = 0

[node name="Sala1" type="Node2D"]
script = ExtResource( 1 )
next_scene = "res://Scenes/Rooms/Sala2.tscn"

[node name="ScreenShake" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="ScreenShake"]
position = Vector2( 128, 0 )
emitting = false
amount = 10
lifetime = 3.0
one_shot = true
process_material = SubResource( 1 )
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="ScreenShake"]
position = Vector2( 128, 128 )
current = true

[node name="Timer" type="Timer" parent="ScreenShake"]
wait_time = 0.1
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ScreenShake"]
stream = ExtResource( 4 )
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="ScreenShake/AudioStreamPlayer"]
wait_time = 0.5
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 128, 128 )
scale = Vector2( 18, 18 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite2" type="Sprite" parent="."]

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 128, 128 )
tile_set = SubResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -458761, 1, 0, -458753, 1, 0, -524288, -1073741822, 0, -524287, -1073741823, 0, -524286, -1073741823, 0, -524285, -1073741823, 0, -524284, -1073741823, 0, -524283, -1073741823, 0, -524282, -1073741823, 0, -524281, -1073741823, 0, -393225, 1, 0, -393217, 1, 0, -458752, 1610612737, 0, -327689, 1, 0, -327681, 1, 0, -393216, 1610612737, 0, -262153, 1, 0, -262145, 1, 0, -327680, 1610612737, 0, -196616, -1610612735, 0, -196615, -1610612735, 0, -196614, 1610612736, 0, -196609, 1, 0, -262144, 1610612738, 0, -262143, -1610612735, 0, -262142, -1610612735, 0, -262141, -1610612735, 0, -262140, -1610612735, 0, -262139, -1610612735, 0, -262138, -1610612735, 0, -262137, -1610612735, 0, -131078, 1610612737, 0, -131073, 1, 0, -65542, 1610612737, 0, -65537, 1, 0, -6, 1610612737, 0, -1, 1, 0, 65530, 1610612737, 0, 65535, 1, 0, 131066, 1610612737, 0, 131071, 1, 0, 196602, 1610612737, 0, 196607, 1, 0, 262138, 1610612737, 0, 262143, 1, 0, 327674, 1610612737, 0, 327679, 1, 0, 393210, 1610612737, 0, 393215, 1, 0, 458746, 1610612737, 0, 458751, 1, 0, 524282, 1610612738, 0, 524283, 1610612736, 0, 524287, 1, 0 )

[node name="Gate" parent="TileMap" instance=ExtResource( 10 )]
position = Vector2( 120, -88 )
rotation = -5.07036e-006

[node name="Portals" parent="TileMap" instance=ExtResource( 11 )]

[node name="Portal1" parent="TileMap/Portals" index="0"]
position = Vector2( -40, 120 )

[node name="Portal2" parent="TileMap/Portals" index="1"]
position = Vector2( 24, -88 )
rotation = 1.57079

[node name="Player" parent="." instance=ExtResource( 12 )]
position = Vector2( 16, 40 )
[connection signal="timeout" from="ScreenShake/Timer" to="ScreenShake" method="_on_Timer_timeout"]
[connection signal="finished" from="ScreenShake/AudioStreamPlayer" to="ScreenShake" method="_on_AudioStreamPlayer_finished"]
[connection signal="timeout" from="ScreenShake/AudioStreamPlayer/Timer" to="ScreenShake/AudioStreamPlayer" method="_on_Timer_timeout"]
[connection signal="body_entered" from="TileMap/Gate" to="." method="_on_Gate2_body_entered"]
[connection signal="animation_finished" from="Player/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="TileMap/Portals"]

[editable path="Player"]
