[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/Rooms/NewRoomCode.gd" type="Script" id=1]
[ext_resource path="res://Assets/black.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Prefabs/ScreenShake.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Witchcraft_spr_sheets_V1_0.png" type="Texture" id=4]
[ext_resource path="res://Assets/my_wall.png" type="Texture" id=5]
[ext_resource path="res://Assets/mushy.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Prefabs/Hazard.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Prefabs/Gate.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=5]
0/name = "Witchcraft_spr_sheets_V1_0.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 446, 120, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Witchcraft_spr_sheets_V1_0.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 382, 120, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Witchcraft_spr_sheets_V1_0.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 414, 120, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "my_wall.png 3"
3/texture = ExtResource( 5 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "mushy.png 4"
4/texture = ExtResource( 6 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [  ]
4/z_index = 0
5/name = "mushy.png 5"
5/texture = ExtResource( 6 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 16, 0, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shapes = [  ]
5/z_index = 0
6/name = "mushy.png 6"
6/texture = ExtResource( 6 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 32, 0, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shapes = [  ]
6/z_index = 0

[node name="TemplateSala" type="Node2D"]
script = ExtResource( 1 )
next_scene = "res://Scenes/Rooms/Sala3.tscn"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 128, 128 )
scale = Vector2( 20, 20 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="ScreenShake" parent="." instance=ExtResource( 3 )]

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 128, 128 )
tile_set = SubResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -458760, -1073741822, 0, -458759, -1073741823, 0, -458758, -1073741823, 0, -458757, -1073741823, 0, -458756, -1073741823, 0, -458755, -1073741823, 0, -458754, -1073741823, 0, -458753, -1073741823, 0, -524288, -1073741823, 0, -524287, -1073741823, 0, -524286, -1073741823, 0, -524285, -1073741823, 0, -524284, -1073741823, 0, -524283, -1073741823, 0, -524282, -1073741823, 0, -524281, 2, 0, -393224, 1610612737, 0, -458745, 1, 0, -327688, 1610612737, 0, -393209, 1, 0, -262152, 1610612737, 0, -327673, 1, 0, -196616, 1610612737, 0, -262137, 1, 0, -131080, 1610612737, 0, -196601, 1, 0, -65544, 1610612737, 0, -131065, 1, 0, -8, 1610612737, 0, -65529, 1, 0, 65528, 1610612737, 0, 7, 1, 0, 131064, 1610612737, 0, 65543, 1, 0, 196600, 1610612737, 0, 131079, 1, 0, 262136, -1073741824, 0, 196615, 0, 0, 327671, 1, 0, 393207, 1, 0, 458743, 1, 0, 458750, 6, 0, 458751, 4, 0, 393216, 4, 0, 393217, 5, 0, 524280, -1610612735, 0, 524281, -1610612735, 0, 524282, -1610612735, 0, 524283, -1610612735, 0, 524284, -1610612735, 0, 524285, -1610612735, 0, 524286, -1610612735, 0, 524287, -1610612735, 0, 458752, -1610612735, 0, 458753, -1610612735, 0, 458754, -1610612735, 0, 458755, -1610612735, 0, 458756, -1610612735, 0, 458757, -1610612735, 0, 458758, -1610612735, 0, 458759, -1610612735, 0 )

[node name="Hazard2" parent="TileMap" instance=ExtResource( 7 )]
position = Vector2( 0, 112 )
rotation = 1.57079

[node name="Gate" parent="TileMap" instance=ExtResource( 8 )]
position = Vector2( 120, 88 )

[node name="Player" parent="." instance=ExtResource( 9 )]
position = Vector2( 16, 232 )
[connection signal="body_entered" from="TileMap/Hazard2/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="TileMap/Gate" to="." method="_on_Gate_body_entered"]
[connection signal="animation_finished" from="Player/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="ScreenShake"]

[editable path="TileMap/Hazard2"]

[editable path="Player"]
